project(source_file)  

set(PROJECT_SUBDIRECTORIES  
    single_link_list  
    loop_link_list  
    double_link_list  
    double_loop_link_list  
    stack  
    queue  
    loop_queue  
    force_match  
    kmp  
    tree  
    tree_level_traverse  
    tree_non_recursive
    in_thread_tree
    pre_thread_tree
    post_thread_tree
    binary_search_tree
    avl_tree
    huffman_tree
    adjacency_matrix
    prim
    kruskal
    dijkstra
    floyd
    topo_logical_sort
    critical_path
    sequence_search
    binary_search
    b_tree
    hash_list
    insert_sort
    shell_sort
    bubble_sort
    quick_sort
)  

foreach(SUBDIR  ${PROJECT_SUBDIRECTORIES})  
    add_subdirectory(${SUBDIR})  
endforeach()